--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Sep 15 2018 00:00:00 GMT+0000 (UTC)  -->
+<!--  Last Published: Sun Sep 16 2018 11:51:02 GMT+0000 (UTC)  -->
 <html data-wf-page="5b981786fbd4311918825e87" data-wf-site="5b981786fbd4317fd4825e86">
 <head>
   <meta charset="utf-8">
@@ -226,14 +226,14 @@
   </div>
   <div class="section">
     <div class="div-block">
-      <div class="div-block-2"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 711px) 100vw, 711px" class="image"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 711px) 100vw, 711px" class="image"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 711px) 100vw, 711px" class="image _3"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 711px) 100vw, 711px" class="image _2"><img src="images/UNPAID.png" class="image"></div>
-      <h1 class="tag"><strong>Season one</strong></h1>
+      <div class="div-block-2"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 96vw, (max-width: 767px) 100vw, 700px" class="image _2"><img src="images/UNPAID.png" class="image"></div>
+      <h1 class="tag"><strong class="bold-text">Season one</strong></h1>
       <h3 class="description">It’s a show about the self made, no bullsh*t individuals that have built their career from unpaid experiences.</h3>
       <h1 class="launch-date">Dallas, tx <strong>·</strong> Nov 15</h1>
     </div>
   </div>
   <div data-w-id="ea64235c-12f6-7c53-0dc7-c2fd8ab1b2aa" class="section-2">
-    <div><img src="images/UNPAID.png" class="word"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 100vw, 350px" class="word-1"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 100vw, 350px" class="word-2"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 100vw, 350px" class="word-3"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 100vw, 350px" class="word-4"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 100vw, 350px" class="word-5"></div>
+    <div class="div-block-3"><img src="images/UNPAID.png" class="word"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-1"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-2"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-3"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-4"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-5"></div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
