Add Get Notified button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--  Last Published: Sat Sep 22 2018 17:40:59 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat Sep 29 2018 01:20:50 GMT+0000 (UTC)  -->
 <html data-wf-page="5b981786fbd4311918825e87" data-wf-site="5b981786fbd4317fd4825e86">
 <head>
   <meta charset="utf-8">
@@ -226,10 +226,13 @@
       <h1 class="tag"><strong class="bold-text">Season one</strong></h1>
       <h3 class="description">It’s a show about the self made, no bullsh*t individuals that have built their career from unpaid experiences.</h3>
       <h1 class="launch-date">Dallas, tx <strong>·</strong> Nov 16</h1>
+      <div data-w-id="aebe5540-71fd-3b69-bda9-c9eeecd29a0c" class="div-block-5"><a href="https://goo.gl/forms/rUsaUYXbH9U5mCMp2" target="_blank" data-w-id="c63bf543-e6d5-ebbe-2939-0b0a7025f53f" class="get-notified-button w-button">Get Notified</a>
+        <div data-w-id="a5a9cf07-f6d8-3364-7c6f-b9c547e753c3" class="div-block-4"></div>
+      </div>
     </div>
   </div>
   <div data-w-id="ea64235c-12f6-7c53-0dc7-c2fd8ab1b2aa" class="section-2">
-    <div class="div-block-3"><img src="images/UNPAID.png" class="word"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-1"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-2"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-3"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-4"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 479px) 52vw, 350px" class="word-5"></div>
+    <div class="div-block-3"><img src="images/UNPAID.png" class="word"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="100vw" class="word-1"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="100vw" class="word-2"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="100vw" class="word-3"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="100vw" class="word-4"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="100vw" class="word-5"></div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/unpaid.js" type="text/javascript"></script>
