--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
       <div class="div-block-2"><img src="images/UNPAIDPoutline.png" srcset="images/UNPAIDPoutline-p-500.png 500w, images/UNPAIDPoutline.png 711w" sizes="(max-width: 991px) 70vw, 35vw" class="image _2"><img src="images/UNPAID.png" class="image"></div>
       <h1 class="tag"><strong class="bold-text">Season one</strong></h1>
       <h3 class="description">It’s a show about the self made, no bullsh*t individuals that have built their career from unpaid experiences.</h3>
-      <h1 class="launch-date">Dallas, tx <strong>·</strong> Nov 16</h1>
+      <h1 class="launch-date">Dallas, tx <strong>·</strong> Early 2019</h1>
       <div data-w-id="aebe5540-71fd-3b69-bda9-c9eeecd29a0c" class="div-block-5"><a href="https://goo.gl/forms/rUsaUYXbH9U5mCMp2" target="_blank" data-w-id="c63bf543-e6d5-ebbe-2939-0b0a7025f53f" class="get-notified-button w-button">Get Notified</a>
         <div data-w-id="a5a9cf07-f6d8-3364-7c6f-b9c547e753c3" class="div-block-4"></div>
       </div>
